--- a/web1.html
+++ b/web1.html
@@ -6,12 +6,15 @@
 </head>
 <body>
     <h2>Registro</h2>
+    
     <form method="post" action="web2.php">
-        Introduce nombre de usuario: <input type="text" name="usuario"/> <br>
-        Introduce la contraseña 1: <input type="password" name="contraseña1"/> <br>
-        Introduce la contraseña 2: <input type="password" name="contraseña2"/> <br>
-        <input type="submit"/>
-        
+        <fieldset>
+            <legend>Usuario y contraseña</legend><br>
+            Introduce nombre de usuario: <input type="text" name="usuario"/> <br><br>
+            Introduce la contraseña 1: <input type="password" name="contraseña1"/> <br><br>
+            Introduce la contraseña 2: <input type="password" name="contraseña2"/> <br><br>
+            <input type="submit"/><br>
+        </fieldset>
     </form>
 </body>
 </html>
